Implement `settings` API for `backend-go`
