# backend-go/api/codepair/v1/models/model_yorkie_intelligence_config_config.go
@@ -1,0 +1,8 @@
+package models
+
+// YorkieIntelligenceConfigConfig - Yorkie Intelligence Config
+type YorkieIntelligenceConfigConfig struct {
+
+	// List of features
+	Features []YorkieIntelligenceConfigConfigFeaturesInner `json:"features,omitempty"`
+}
