# backend-go/api/codepair/v1/models/model_yorkie_intelligence_config_config_features_inner.go
@@ -1,0 +1,10 @@
+package models
+
+type YorkieIntelligenceConfigConfigFeaturesInner struct {
+
+	Title string `json:"title"`
+
+	Icon string `json:"icon"`
+
+	Feature string `json:"feature"`
+}
